<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit.EditFragment">

    <EditText
        android:id="@+id/songName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/songName" />

    <EditText
        android:id="@+id/songComposer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/songComposer" />

    <EditText
        android:id="@+id/songLirics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginStart="48dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/songLirics" />

    <EditText
        android:id="@+id/songArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginStart="64dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/songArtist" />

    <EditText
        android:id="@+id/songTon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="185dp"
        android:layout_marginStart="200dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/songTon" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="670dp"
        android:layout_marginStart="150dp"
        android:text="@string/save" />

    <EditText
        android:id="@+id/songText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine" />

</FrameLayout>