<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="100dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/hello_blank_fragment" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:layout_marginStart="130dp"
        android:textSize="20sp"
        android:textStyle="italic"
        android:text="@string/emailTextView" />

    <Button
        android:id="@+id/callButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="380dp"
        android:layout_marginStart="110dp"
        android:onClick="callToSupport"
        android:text="@string/callButton" />

    <ImageButton
        android:id="@+id/nextImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="670dp"
        android:layout_marginStart="330dp"
        android:onClick="justGo"
        android:src="@android:drawable/ic_media_next" />

</FrameLayout>